<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jandan</string>
    <string name="column_news">NEWS</string>
    <string name="column_pics">PICS</string>
    <string name="column_ooxx">OOXX</string>
    <string name="news_tag"> </string>
    <string name="news_comments">[%s]</string>
    <string name="action_settings">设置</string>
    <string name="post_comments">共有%d条评论</string>
    <string name="settings_nomal">settings</string>
    <string name="settings_check_update">check updating</string>
    <string name="settings_check_update_summary">version:</string>
    <string name="settings_clear_cache">clear cache</string>
    <string name="settings_more">others</string>
    <string name="settings_feedback">feedback</string>
    <string name="settings_feedback_summary">go to market</string>
    <string name="settings_about">About</string>
    <string name="settings_about_summary">about us</string>
    <string name="share">share</string>
    <string name="nav_news">新鲜事</string>
    <string name="nav_pics">无聊图</string>
    <string name="nav_ooxx">妹子图</string>
    <string name="nav_joke">段子</string>
    <string name="nav_sub_header">sub_header</string>

    <string name="joke_oo">oo:[%d]</string>
    <string name="joke_xx">xx:[%d]</string>
    <string name="joke_comments">↓吐槽:[%d]</string>
    <string name="hotComments">热门评论</string>
    <string name="allComments">所有评论</string>
    <string name="hint">回复@%s：</string>
    <string name="comment_too_short">你的。。。太短</string>

    <string name="loading">Loading…</string>
    <string name="load_failed">Load failed!</string>
</resources>
